styles/portfolio.css
:root {
  --branding-color: #6c63ff;
  --secondary-color: rgb(25, 28, 31);
  --heading-font-family: "Roboto", serif;
  --default-font-family: "Roboto", sans-serif;
}

body {
  font-family: var(--default-font-family);
}
h1, h2, h3, h4, h5, h6 {
  font-family: var(--heading-font-family);
  font-optical-sizing: auto;
  font-style: normal;
  color: whitesmoke;
}

h1 {
  font-size: 72px;
}

p {
  font-family: var(--default-font-family);
  font-weight: 500;
  font-style: normal;
}

.hero {
  background-color: var(--secondary-color);
  text-align: center;
  padding: 160px 20px;
}

.hero p {
  font-size: 24px;
  font-weight: bold;
  margin: 0;
  color: whitesmoke;
}

.hero h2 {
  font-family: var(--default-font-family);
  font-weight: normal;
  line-height: 1.5;
  font-size: 18px;

}

.btn-branding {
  background: whitesmoke;
  border-radius: 50px;
  color: black;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  font-weight: bold;
  line-height: 27px;
  padding: 18px 30px;
  margin-top: 30px;
}

.photo-portfolio {
  background-color: var(--secondary-color);
}
.camera_model {
  background: black;
  color: whitesmoke;
}
@media (max-width: 960px) {
  h1 {
    font-size: 48px;
  }
}

.about-me h2 {
  color: #F65282;
  font-size: 18px;
  font-weight: bold;
  text-align: left;
}

.about-me h1 {
  text-align: left;
  font-size: 64px;
}

.about-me p {
  font-size: 18px;
  line-height: 30px;
  font-weight: lighter;
  text-align: left;
}

.about-me i {
  margin-right: 20px;
}

.camera_model {
  height: 30px;
  width: 60px;
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.button-contact {
text-align: left;
}

.social-icons {
  text-align: left;
}

.rafa-photobw {
  height: auto;
  width: auto;
}

.gallery-heading {
  font: var(--default-font-family);
  font-size: 48px;
  line-height: 16px;
  font-weight: bolder;
  color: whitesmoke;
  text-align: center;
  padding: 40px;
  margin: 50px;
}

.gallery-body {
  background-color: rgb(25, 28, 31)
}

.contact-body {
  background-color: var(--secondary-color);
}

.contact-details {
  text-align: center;
  margin: 100px;
}

.contact-details h3 {
  color: #F65282;
  font-size: 18px;
  font-family: var(--default-font-family);
}

.contact-details p {
  color: whitesmoke;
  font-size: 14px;
  font-weight: 300;
}

.get-in-touch {
  text-align: center;
  font-weight: 400;
}



html, body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
.content-container {
  flex: 1;
}
footer {
  background-color: #282323;
  color: whitesmoke;
  font-family: var(--default-font-family);
  padding-top: 25px;
  padding-bottom: 25px;
  margin-bottom: 40px;
}
.footer-name {
  font-family: var(--default-font-family);
  font-size: 24px;
  font-weight: bold;
  padding-top: 10px;
}

.footer-rights {
  font-family: var(--default-font-family);
  font-size: 14px;
  padding-top: 15px;
}

.facebook, .linkedin, .instagram {
  padding: 15px;
}

.social-icons a {
  text-decoration: none;
  color: inherit;
}

